config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms
  template:
    metadata:
      labels:
        app: ms
    spec:
      containers:
      - name: config-server
        image: hazemkaied/config-server:1
        ports:
        - name: config-port
          containerPort: 2001

---
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  ports:
  - port: 2001
    targetPort: 2001
    protocol: TCP
  selector:
    app: ms
