database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms
  template:
    metadata:
      labels:
        app: ms
    spec:
      containers:
      - name: db
        image: hazemkaied/postgresql:1
        ports:
        - name: db-port
          containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: ms
