front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms
  template:
    metadata:
      labels:
        app: ms
        tier: frontend
    spec:
      containers:
      - name: veterinary-ui
        image: hazemkaied/veterinary-ui-image:3
        ports:
        - name: front-port
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: "TCP"
  selector:
    app: ms
    tier: frontend
  type: LoadBalancer
